@@ -488,6 +488,7 @@ All (GUI):
 - Allow wxGraphicsFont creation without passing by wxFont.
 - Added wxDataViewCustomRenderer::ActivateCell().
 - Add "checked" property for toolbar tool elements in XRC.
+- Allow customization of the locations where persistent settings are stored.
 
 OSX:
 
